认证列表和添加

--- a/src/assets/sass/partials/_var.scss
+++ b/src/assets/sass/partials/_var.scss
@@ -80,6 +80,7 @@ $square-title: 0.14rem;
 $normal-text: 0.12rem;
 $input-text: 0.14rem;
 $big-text: 0.16rem;
+$result-text: 0.15rem;
 $price: 0.18rem;
 $package-title: 0.12rem;
 $navbar-title: 0.13rem;
